# Meipuru

./: CMakeLists.txt
binding/: binding.cpp
include/: MeipuruReader.h  binding.h
src/: BaseTag.h  ID3v2Tag.cpp  ID3v2Tag.h  MeipuruExport.h  MeipuruReader.cpp  MeipuruReader.h  Utils.h  main.cpp
